<resources>

    <string name="app_name">SensiBLE car</string>
    <string name="useLess">useLess</string>

    <string name="play">Play</string>
    <string name="settings">Settings</string>

    <string name="select_your_car">Select your car</string>
    <string name="game_sound">Game Sound</string>
    <string name="choose_difficulty_level">Choose Difficulty level</string>

    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="title_activity_scan">Device Scan</string>
    <string name="startScanMenu">Start Scan</string>
    <string name="StopScanMenu">Stop Scan</string>
    <string name="title_activity_demo">Feature list</string>

    <string name="yor_score">Your score:\u0020</string>
    <string name="your_score">Your score: %1$d</string>
    <string name="openRegister">Register</string>
    <string name="openDebugConsole">Debug Console</string>
    <string name="TapTo">Tap to scan</string>
    <string name="select_your_ble">Select youe device</string>
    <dimen name="featureTextSize">22sp</dimen>
</resources>
