<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_game_settings.GameSettingsFragment"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewForShowingSelectAnImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_your_car"
                android:textSize="20sp"
                android:gravity="center"
                android:padding="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerViewForShowingCarImages"
                android:layout_below="@id/TextViewForShowingSelectAnImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_sound"
                android:textSize="20sp"
                android:layout_alignParentStart="true"/>

            <Switch
                android:id="@+id/SwitchForGameSoundOnOFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/useLess"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/TextViewForShowingTextSelectDifficultyLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_difficulty_level"
                android:textSize="20sp"
                android:gravity="center"
                android:padding="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/TextViewForShowingTextSelectDifficultyLevel"
                android:weightSum="3"
                android:padding="5dp">

                <Button
                    android:id="@+id/ButtonForDifficultyLevelEasy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/easy"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/ButtonForDifficultyLevelMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/ButtonForDifficultyLevelHard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hard"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>